# msu2020cppprogs

./: README.md
problem1/: AutoTest.hpp  CIntN.cpp  CIntN.hpp  CMakeLists.txt  main.cpp
problem10/: main.py
problem2/: AutoTest.hpp  CMakeLists.txt  CVector.cpp  CVector.hpp  main.cpp
problem3/: AutoTest.hpp  CMakeLists.txt  CStringQueue.cpp  CStringQueue.hpp  main.cpp
problem4/: AutoTest.hpp  CMakeLists.txt  Trie.hpp  lzwCompressor.cpp  lzwCompressor.hpp  main.cpp
problem5and6/: 7.py  9.py  9nonmatplotlib.py
problem7/: AutoTest.hpp  CIntN.cpp  CIntN.hpp  CIntN0.cpp  CIntN0.h  CIntN1.cpp  CIntN1.h  CMakeLists.txt  Creator.cpp  Creator.h  input.txt  main.cpp
problem8/: AutoTest.hpp  CIntN.cpp  CIntN.hpp  CIntN0.cpp  CIntN0.h  CIntN1.cpp  CIntN1.h  CMakeLists.txt  include.h  input.txt  main.cpp
problem9/: AutoTest.hpp  CIntN.cpp  CIntN.hpp  CIntN0.cpp  CIntN0.h  CIntN1.h  CMakeLists.txt  include.h
problem91/: AutoTest.hpp  CIntN.cpp  CIntN0.cpp  CIntN1.cpp  CMakeLists.txt  Creator.cpp  Creator.h  include.h  input.txt
